tests/idris2/error006/expected
1/1: Building IfErr (IfErr.idr)
Error: While processing right hand side of test. Can't find an implementation for Eq Foo.

IfErr:15:10--15:30
 11 | -- hard to achieve and this way is better than displaying the whole
 12 | -- top level search when only part of it is relevant)
 13 | 
 14 | test : Int -> String
 15 | test x = showIfEq MkFoo MkBar
               ^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of test2. Can't find an implementation for Show Foo.

IfErr:23:9--23:29
 19 |   MkBar == MkBar = True
 20 |   _ == _ = False
 21 | 
 22 | test2 : String
 23 | test2 = showIfEq MkFoo MkBar
              ^^^^^^^^^^^^^^^^^^^^

